# AI-Music

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: .gitignore  __init__.py  app.py
app/models/: initial_model.h5  model_11L_Ada_history  model_17L_Ada_history  model_8L_Ada_history
app/src/: eval_model.py  extract_features.py  extract_mfccs.py  plot_features.py  predict_genre.py  preprocessing.py  train_classifier.py
app/static/css/: styles.css
app/static/js/: scripts.js
app/templates/: analysis.html  base.html  base_analysis.html  base_auth.html  index.html  login.html  register.html  upload.html
app/tests/: unit_tests.py
data/: .gitignore  data_info.txt
data/processed/: track_genres.csv
data/processed/labels/: labels.csv  labels.npy
data/processed/mfccs/: mfccs.npy
data/processed/shapes/: mfccs.csv
docs/: .gitignore
docs/draft_documentation/Use cases/: use cases.txt
docs/latex/: anexos.tex  bibliografia.bib  bibliografiaAnexos.bib  memoria.tex
docs/latex/img/: Diagrama_general_de_casos_de_uso.drawio  example_MFCC.jpgZone.Identifier  example_spectrogram.pngZone.Identifier
docs/latex/tex/: 1_Introduccion.tex  1_Introduction.tex  2_Objetivos_del_proyecto.tex  2_Project_objectives.tex  3_Conceptos_teoricos.tex  3_Theorical_concepts.tex  4_Techniques_and_tools.tex  4_Tecnicas_y_herramientas.tex  6_Trabajos_relacionados.tex  (+9 more)
examples/librosa/: MFCC_extraction.py  librosa_advanced_components.py  librosa_basic_components.py  librosa_examples.ipynb
src/: extract_mfccs.py  preprocessing.py  process_audio.py  train_classifier.py
(+2 files in other folders)
