[tool.poetry]
name = "ai-music"
version = "0.1.0"
description = "Repository exploring the intersection of music and artificial intelligence, containing various machine learning models, algorithms, and datasets for music analysis."
authors = ["José Ángel <jle1001@alu.ubu.es>"]
readme = "README.md"
packages = [{include = "ai_music"}]

[tool.poetry.dependencies]
python = "^3.9"
librosa = "^0.10.0.post2"
matplotlib = "^3.7.1"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
